# zephyr-client-sdk

./: .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  prj.conf  prj_native.conf  prj_native_test.conf  prj_test.conf
boards/: b_l4s5i_iot01a.conf  b_l4s5i_iot01a.overlay  native_posix.conf  nrf9160dk_nrf9160.conf  stm32f746g_disco.conf
libs/ed25519-donna/: ed25519-hash-custom.h  ed25519-randombytes-custom.h
libs/uthash/: utarray.h
src/: ca_certificate.h  iota_shell.c  iota_shell.h  main.c  wifi.c  wifi.h
tests/: test_main.c
